--- a/ch1/ch1-sc-eureka/pom.xml
+++ b/ch1/ch1-sc-eureka/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.windmt</groupId>
-    <artifactId>spring-cloud-eureka</artifactId>
+    <groupId>org.xujin.sc</groupId>
+    <artifactId>ch1-sc-eureka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>eureka</name>
+    <name>ch1-sc-eureka</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
