--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<modules>
 		<module>ch1</module>
 		<module>ch2</module>
+		<module>ch3</module>
 	</modules>
 
 	<description>spring cloud gateway调研</description>
