--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>ch1</module>
 		<module>ch2</module>
 		<module>ch3</module>
+		<module>ch4</module>
 	</modules>
 
 	<description>spring cloud gateway调研</description>
