--- a/ch4/ch4-gateway/src/main/resources/application.yml
+++ b/ch4/ch4-gateway/src/main/resources/application.yml
@@ -9,13 +9,13 @@ spring:
       - id: service1_v1
         uri: http://localhost:8081/v1
         predicates:
-        - Path=/s
+        - Path=/test
         - Weight=service1, 95
 
       - id: service1_v2
         uri: http://localhost:8081/v2
         predicates:
-        - Path=/s
+        - Path=/test
         - Weight=service1, 5
 
 logging:
